v1.0.0/modules/schema/pages/class/RationalNumber.adoc
= `RationalNumber`
:toclevels: 4


+++Rational number = 'numerator' / 'denominator'.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:RationalNumber`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`RationalNumber`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<denominator,`denominator`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Denominator. Value 1 indicates the number is a simple integer.+++

| <<numerator,`numerator`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Numerator.+++
|===

'''


//[discrete]
[#denominator]
=== `denominator`
+++Denominator. Value 1 indicates the number is a simple integer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RationalNumber.denominator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#numerator]
=== `numerator`
+++Numerator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RationalNumber.numerator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===


